# lgcns-mlops-practice

./: .gitignore  pyproject.toml  train.py
code_snippets/: setting_env.md
src/common/: logger.py
