[project]
name = "lgcns-mlops-practice"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "soobinlim0506", email = "135047087+soobinlim0506@users.noreply.github.com"},
]
dependencies = [
    "pandas==2.1.4",
    "dG>=0.0.1",
    "matplotlib==3.8.3",
    "pre-commit==3.6.2",
    "isort==5.13.2",
    "mypy==1.9.0",
    "jupyter==1.0.0",
    "bentoml==1.2.6",
    "mlflow==2.11.1",
    "scikit-learn==1.3.2",
    "category-encoders==2.6.3",
    "numpy==1.26.4",
    "pydantic==2.6.3",
    "deepchecks==0.18.1",
    "joblib==1.3.2",
    "rich==13.7.1",
    "seaborn==0.13.2",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "matplotlib>=3.8.3",
    "pre-commit==3.6.2",
    "black>=24.2.0",
    "isort>=5.13.2",
    "mypy>=1.9.0",
    "jupyter>=1.0.0",
]
